--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -1,3 +1,6 @@
+- content_for :head do
+  = stylesheet_link_tag 'application', media: 'all'
+
 #wrapper
   %h3 Today is a great day to make some updates!
 
