Style some stuff better

--- a/app/assets/stylesheets/static.sass
+++ b/app/assets/stylesheets/static.sass
@@ -1,11 +1,15 @@
 body
-  background-color: #000
+  background: image-url('monolith.jpg') no-repeat center center fixed
+  background-size: cover
   margin: 0
   padding: 0
   text-align: center
+  font-family: verdana
 
   h2
     color: #fff
+    font-size: 60px
+    text-shadow: 1px 1px 60px #000
 
   img
     margin-top: 50px
