Add basic styles for sign in

--- a/app/assets/stylesheets/static.sass
+++ b/app/assets/stylesheets/static.sass
@@ -8,8 +8,21 @@ body
 
   h2
     color: #fff
-    font-size: 60px
+    font-size: 40px
     text-shadow: 1px 1px 60px #000
 
   img
     margin-top: 50px
+
+  form
+    background-color: #000
+    color: #fff
+    margin: 0 auto
+    width: 800px
+
+    h1
+      font-size: 60px
+
+    input
+      font-size: 20px
+      margin-bottom: 20px
