--- a/app/views/password/new.html.haml
+++ b/app/views/password/new.html.haml
@@ -1,8 +1,11 @@
-%h1 Admin Password
-
-- if flash[:error]
-  %h2= flash[:error]
+- content_for :head do
+  = stylesheet_link_tag 'static', media: 'all'
 
 = form_for :admin_password do |f|
+  %h1 Admin Password
+
+  - if flash[:error]
+    %h2= flash[:error]
+
   = password_field_tag :admin_password
   = f.submit 'Sign In'
