--- a/app/views/static/rando_stats.html.haml
+++ b/app/views/static/rando_stats.html.haml
@@ -15,17 +15,9 @@
 
   #stat-data{data: { stats: stats.to_json }}
 
-  %h2 2014 Pick Counts
-  %svg(class="chart s2014")
-
-  %h2 2015 Pick Counts
-  %svg(class="chart s2015")
-
-  %h2 2016 Pick Counts
-  %svg(class="chart s2016")
-
-  %h2 2017 Pick Counts
-  %svg(class="chart s2017")
+  - for name in stats.map { |s| s[:name] }
+    %h2 #{name} Pick Counts
+    %svg(class="chart s#{name}")
 
   :javascript
     document.addEventListener("DOMContentLoaded", renderStats())
