Specifically include javascript file

--- a/app/views/artsy_viewer/show.html.haml
+++ b/app/views/artsy_viewer/show.html.haml
@@ -3,5 +3,6 @@
   %link(type="text/css" rel="stylesheet" href="https://webfonts.artsy.net/all-webfonts.css")
   = stylesheet_link_tag 'artsy_viewer', media: 'all'
   = javascript_include_tag 'application'
+  = javascript_include_tag 'artsy_viewer'
 
 %main
