--- a/app/views/book_list/index.html.haml
+++ b/app/views/book_list/index.html.haml
@@ -1,14 +1,16 @@
-- content_for :head do
-  = stylesheet_link_tag 'application', media: 'all'
+%h1= year
 
-#wrapper
-  %h1= year
-  %p #{books.count} books for #{number_with_delimiter total_pages} pages at a pace of #{pace} pages/day.
+%p #{books.count} books for #{number_with_delimiter total_pages} pages at a pace of #{pace} pages/day.
 
-  %table
-    %tbody
-      - books.each do |book|
-        %tr
-          %td= link_to book.title, edit_book_path(book)
-          %td= book.finished_on&.strftime("%m/%d")
-          %td= number_with_delimiter book.pages
+%table.w-full
+  %thead
+    %tr
+      %th Title
+      %th.text-right Finished
+      %th.text-right Pages
+  %tbody
+    - books.each do |book|
+      %tr
+        %td= link_to book.title, edit_book_path(book)
+        %td.text-right= book.finished_on&.strftime("%m/%d")
+        %td.text-right= number_with_delimiter book.pages
