--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -1,3 +1,13 @@
 %h1 Dashboard
 %p= link_to "Artsy Viewer", artsy_viewer_path
+%p= link_to "Book List", book_list_path(year: Time.now.year)
+%p= link_to "Fairing Direball", "faring_direball"
+%p= link_to "Root", root_path
 %p= link_to "Style Pages", article_styles_path
+
+%h2 Admin Pages
+%p= link_to "Books", new_book_path
+
+%h2 Api Routes
+%p= link_to "Ping", "api/v1/ping"
+%p= link_to "Word Rot Killswitch", "api/v1/word_rot/killswitch"
