More Cybertail prototyping

--- a/app/views/cybertail/index.html.haml
+++ b/app/views/cybertail/index.html.haml
@@ -1,3 +1,3 @@
 %h1 Cybertail!
 = turbo_stream_from "hooks"
-%ul#hooks= render partial: "hooks/hook", collection: hooks
+%ul#hooks.bg-off-white.m-0.p-2= render partial: "hooks/hook", collection: hooks
