--- a/app/views/hooks/_hook.html.haml
+++ b/app/views/hooks/_hook.html.haml
@@ -1,3 +1,3 @@
 %li.flex.m-0.p-0.mb-4
   = image_tag(hook.webhook_sender.logo_name, class: "w-8 m-0 h-8 mr-2")
-  %span= link_to hook.message, edit_admin_hook_path(hook)
+  %span.line-clamp-1= link_to hook.message, edit_admin_hook_path(hook)
