Some misc stuff

--- a/app/views/admin/post_bin_requests/show.html.haml
+++ b/app/views/admin/post_bin_requests/show.html.haml
@@ -2,15 +2,15 @@
 
 %p Headers
 
-%pre.text-off-black
+%pre.text-off-black.h-72
   %code= JSON.pretty_generate(post_bin_request.headers)
 
 %p Params
 
-%pre.text-off-black
+%pre.text-off-black.h-72
   %code= JSON.pretty_generate(post_bin_request.params)
 
 %p Body
 
-%pre.text-off-black
+%pre.text-off-black.h-72
   %code= post_bin_request.body
