--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -1,6 +1,7 @@
 %h1 Dashboard
 %p= link_to "Artsy Viewer", artsy_viewer_path
-%p= link_to "Fairing Direball", "faring_direball"
+%p= link_to "Cybertail", cybertail_path
+%p= link_to "Fairing Direball", faring_direball_path
 %p= link_to "Reading List", reading_list_path(year: Time.now.year)
 %p= link_to "Root", root_path
 %p= link_to "Style Pages", article_styles_path
@@ -11,5 +12,5 @@
 %p= link_to "Project List", admin_projects_path
 
 %h2 Api Routes
-%p= link_to "Ping", "api/v1/ping"
-%p= link_to "Word Rot Killswitch", "api/v1/word_rot/killswitch"
+%p= link_to "Ping", api_v1_ping_path
+%p= link_to "Word Rot Killswitch", api_v1_word_rot_killswitch_path
