--- a/app/views/static/form.html.haml
+++ b/app/views/static/form.html.haml
@@ -6,5 +6,7 @@
 %form
   %input(type="text" placeholder="name" autofocus="true")
   %input(type="text" placeholder="email")
+  %input(type="date")
+  %textarea(placeholder="write a note")
   %input(type="password" placeholder="password")
   %button(type="submit") submit
