--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -5,6 +5,7 @@
 %p= link_to "Reading List", reading_list_path(year: Time.now.year)
 %p= link_to "Root", root_path
 %p= link_to "Style Pages", article_styles_path
+%p= link_to "Wishlist", wishlist_path
 
 %h2 Admin Pages
 %p= link_to "Books", new_admin_book_path
