--- a/app/views/static/form.html.haml
+++ b/app/views/static/form.html.haml
@@ -10,3 +10,8 @@
   %textarea(placeholder="write a note")
   %input(type="password" placeholder="password")
   %button(type="submit") submit
+
+%h2 Another Form
+
+%form
+  %button(type="submit") submit
