Add total line to model counts

--- a/app/views/admin/model_counts/index.html.haml
+++ b/app/views/admin/model_counts/index.html.haml
@@ -14,3 +14,8 @@
         %tr
           %td= klass
           %td.text-right= number_with_delimiter count
+    %tfoot
+      %tr
+        %td Total
+        %td.text-right= number_with_delimiter model_counts.values.sum
+
