--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -1,6 +1,7 @@
 %h1 Dashboard
 %p= link_to "Artsy Viewer", artsy_viewer_path
 %p= link_to "Cybertail", cybertail_path
+%p= link_to "Financial Report", financial_report_path(year: Time.now.year)
 %p= link_to "Fairing Direball", faring_direball_path
 %p= link_to "Reading List", reading_list_path(year: Time.now.year)
 %p= link_to "Root", root_path
