--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,21 +1,7 @@
 !!!
 %html
   %head
-    %meta(charset='utf-8')
-    %meta(name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0')
-    %title Monolithium
-    = csrf_meta_tags
-    = stylesheet_link_tag 'tailwind'
-    = javascript_importmap_tags
+    = render partial: "layouts/shared_head"
     = yield :head
   %body.bg-off-black.text-off-white.selection:bg-pink.p-4.md:p-0.m-auto(class="max-w-[800px]")
-    %header.md:mb-12= yield :header
-    %main
-      - unless flash[:alert].nil?
-        .border.px-6.mb-8.text-sm.bg-purple.text-off-white.border-pink
-          %p= flash[:alert]
-      - unless flash[:notice].nil?
-        .border.px-6.mb-8.text-sm.bg-dark-gray.text-off-white.border-purple
-          %p= flash[:notice]
-      = yield
-    %footer= yield :footer
+    = render partial: "layouts/shared_main"
