--- a/app/views/layouts/artsy_viewer.html.haml
+++ b/app/views/layouts/artsy_viewer.html.haml
@@ -1,11 +1,10 @@
 !!!
 %html
   %head
-    %title Artsy Viewer
-    = csrf_meta_tags
     %meta(name="apple-mobile-web-app-capable" content="yes")
     %link(type="text/css" rel="stylesheet" href="https://webfonts.artsy.net/all-webfonts.css")
-    = stylesheet_link_tag 'tailwind'
-    = javascript_importmap_tags
+    %title Artsy Viewer
+    %meta(name='viewport' content='')
+    = render partial: "layouts/shared_head"
   %body
     %main(data-controller="artsy-viewer")=yield
