--- a/app/views/financial_reports/show.html.haml
+++ b/app/views/financial_reports/show.html.haml
@@ -30,6 +30,12 @@
       %td.text-left Starting
       = render partial: "amount_cents", collection: checking_data.starting_amounts
     %tr
+      %td.text-left Income
+      = render partial: "amount_cents", collection: checking_data.income_amounts
+    %tr
+      %td.text-left Expenses
+      = render partial: "amount_cents", collection: checking_data.expenses_amounts
+    %tr
       %td.text-left Ending
       = render partial: "amount_cents", collection: checking_data.ending_amounts
     %tr
