--- a/app/views/static/form.html.haml
+++ b/app/views/static/form.html.haml
@@ -9,6 +9,7 @@
   %input(type="date")
   %textarea(placeholder="write a note")
   %input(type="password" placeholder="password")
+  %input(required="true" type="file")
   %button(type="submit") submit
 
 %h2 Another Form
