--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -1,17 +1,22 @@
 %h1 Dashboard
+
+%h2 Public Pages
 %p= link_to "Artsy Viewer", artsy_viewer_path
-%p= link_to "Cybertail", cybertail_path
-%p= link_to "Financial Report", financial_report_path(year: Time.now.year)
 %p= link_to "Fairing Direball", faring_direball_path
 %p= link_to "Reading List", reading_list_path(year: Time.now.year)
 %p= link_to "Root", root_path
 %p= link_to "Style Pages", article_styles_path
 %p= link_to "Wishlist", wishlist_path
 
+%h2 Private Pages
+%p= link_to "Cybertail", cybertail_path
+%p= link_to "Financial Report", financial_report_path(year: Time.now.year)
+%p= link_to "Model Counts", model_counts_path
+%p= link_to "Today", today_path
+
 %h2 Admin Pages
 %p= link_to "Books", new_admin_book_path
 %p= link_to "Gift Ideas", admin_gift_ideas_path
-%p= link_to "Model Counts", admin_model_counts_path
 %p= link_to "Post Bin", admin_post_bin_requests_path
 %p= link_to "Project List", admin_projects_path
 
