--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -42,6 +42,7 @@
   input[type='file'],
   input[type='password'],
   input[type='text'],
+  select,
   textarea {
     @apply bg-off-black;
     @apply block;
@@ -54,7 +55,8 @@
     @apply w-80;
   }
 
-  input[type='file']:invalid {
+  input[type='file']:invalid,
+  select:invalid {
     @apply text-dark-gray;
   }
 
@@ -62,11 +64,13 @@
   input:focus[type='file'],
   input:focus[type='password'],
   input:focus[type='text'],
+  select:focus,
   textarea:focus,
   input:hover[type='date'],
   input:hover[type='file'],
   input:hover[type='password'],
   input:hover[type='text'],
+  select:hover,
   textarea:hover {
     @apply border-pink;
     @apply ring-0;
