--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -17,6 +17,7 @@
 %h2 Admin Pages
 %p= link_to "Books", new_admin_book_path
 %p= link_to "CSV Uploads", admin_csv_uploads_path
+%p= link_to "Financial Accounts", admin_financial_accounts_path
 %p= link_to "Gift Ideas", admin_gift_ideas_path
 %p= link_to "Post Bin", admin_post_bin_requests_path
 %p= link_to "Project List", admin_projects_path
