Extract class for flash styles
Also adds class to help in testing for alert vs notice.

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -9,6 +9,14 @@
     @apply prose-lg;
   }
 
+  .flash {
+    @apply border;
+    @apply px-6;
+    @apply mb-8;
+    @apply text-sm;
+    @apply text-off-white;
+  }
+
   table {
     @apply text-lg;
   }
