--- a/app/views/layouts/_shared_main.html.haml
+++ b/app/views/layouts/_shared_main.html.haml
@@ -1,10 +1,10 @@
 %header.md:mb-12= yield :header
 %main
   - unless flash[:alert].nil?
-    .border.px-6.mb-8.text-sm.bg-purple.text-off-white.border-pink
-      %p= flash[:alert]
+    .flash.bg-purple.border-pink
+      %p.alert= flash[:alert]
   - unless flash[:notice].nil?
-    .border.px-6.mb-8.text-sm.bg-dark-gray.text-off-white.border-purple
-      %p= flash[:notice]
+    .flash.bg-dark-gray.border-purple
+      %p.notice= flash[:notice]
   = yield
 %footer= yield :footer
