Match CRUD operations and tests for good ones

--- a/app/views/admin/gift_ideas/edit.html.haml
+++ b/app/views/admin/gift_ideas/edit.html.haml
@@ -1,4 +1,5 @@
-%h1 Gift Idea #{gift_idea.id}
-%p= link_to "show", admin_gift_idea_path(gift_idea)
-%p= link_to "delete", admin_gift_idea_path(gift_idea), data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }
+%h1 Edit Gift Idea #{gift_idea.id}
+
+%p= link_to "Show Gift Idea", admin_gift_idea_path(gift_idea)
+
 = render "form", gift_idea: gift_idea, button_label: "update"
