Use crud namespace instead of admin

--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -14,13 +14,13 @@
 %p= link_to "Model Counts", model_counts_path
 %p= link_to "Today", today_path
 
-%h2 Admin Pages
-%p= link_to "Books", new_admin_book_path
-%p= link_to "CSV Uploads", admin_csv_uploads_path
-%p= link_to "Financial Accounts", admin_financial_accounts_path
-%p= link_to "Gift Ideas", admin_gift_ideas_path
-%p= link_to "Post Bin", admin_post_bin_requests_path
-%p= link_to "Project List", admin_projects_path
+%h2 CRUD Pages
+%p= link_to "Books", new_crud_book_path
+%p= link_to "CSV Uploads", crud_csv_uploads_path
+%p= link_to "Financial Accounts", crud_financial_accounts_path
+%p= link_to "Gift Ideas", crud_gift_ideas_path
+%p= link_to "Post Bin", crud_post_bin_requests_path
+%p= link_to "Project List", crud_projects_path
 
 %h2 Api Routes
 %p= link_to "Ping", api_v1_ping_path
