--- a/app/views/reading_list/index.html.haml
+++ b/app/views/reading_list/index.html.haml
@@ -15,6 +15,6 @@
   %tbody
     - reading_list.books.each do |book|
       %tr
-        %td= link_to book.title, edit_admin_book_path(book)
+        %td= link_to book.title, edit_crud_book_path(book)
         %td.text-right= book.finished_on&.strftime("%m/%d")
         %td.text-right= number_with_delimiter book.pages
