Admin views random records

--- a/app/views/crud/csv_uploads/index.html.haml
+++ b/app/views/crud/csv_uploads/index.html.haml
@@ -2,6 +2,8 @@
 
 %p= link_to "New CSV Upload", new_crud_csv_upload_path
 
+%p= link_to "Random CSV Upload", crud_csv_upload_path("random")
+
 %table
   %thead
     %tr
