--- a/app/views/crud/financial_accounts/index.html.haml
+++ b/app/views/crud/financial_accounts/index.html.haml
@@ -2,6 +2,8 @@
 
 %p= link_to "New Financial Account", new_crud_financial_account_path
 
+%p= link_to "Random Financial Account", crud_financial_account_path("random")
+
 %table
   %thead
     %tr
