--- a/app/views/crud/gift_ideas/index.html.haml
+++ b/app/views/crud/gift_ideas/index.html.haml
@@ -2,6 +2,8 @@
 
 %p= link_to "New Gift Idea", new_crud_gift_idea_path
 
+%p= link_to "Random Gift Idea", crud_gift_idea_path("random")
+
 %table
   %thead
     %tr
