Admin views books

--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -15,7 +15,7 @@
 %p= link_to "Today", today_path
 
 %h2 CRUD Pages
-%p= link_to "Books", new_crud_book_path
+%p= link_to "Books", crud_books_path
 %p= link_to "CSV Uploads", crud_csv_uploads_path
 %p= link_to "Financial Accounts", crud_financial_accounts_path
 %p= link_to "Gift Ideas", crud_gift_ideas_path
