--- a/app/views/crud/books/_form.html.haml
+++ b/app/views/crud/books/_form.html.haml
@@ -1,4 +1,4 @@
 = form_with model: [:crud, book] do |form|
-  = form.text_field :isbn
-  = form.date_field :finished_on
+  = form.text_field :isbn, placeholder: "isbn"
+  = form.date_field :finished_on, placeholder: "finished on"
   = form.button button_label
