--- a/app/views/crud/books/show.html.haml
+++ b/app/views/crud/books/show.html.haml
@@ -2,4 +2,6 @@
 
 %p= link_to "Book List", crud_books_path
 
+%p= link_to "Edit Book", edit_crud_book_path(book)
+
 = render partial: "attrs_table", locals: { attrs: book.table_attrs }
