Add datetime-local input field to form styles

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -47,6 +47,7 @@
   }
 
   input[type='date'],
+  input[type='datetime-local'],
   input[type='file'],
   input[type='password'],
   input[type='text'],
@@ -69,12 +70,14 @@
   }
 
   input:focus[type='date'],
+  input:focus[type='datetime-local'],
   input:focus[type='file'],
   input:focus[type='password'],
   input:focus[type='text'],
   select:focus,
   textarea:focus,
   input:hover[type='date'],
+  input:hover[type='datetime-local'],
   input:hover[type='file'],
   input:hover[type='password'],
   input:hover[type='text'],
