--- a/app/views/static/form.html.haml
+++ b/app/views/static/form.html.haml
@@ -7,6 +7,7 @@
   %input(type="text" placeholder="name" autofocus="true")
   %input(type="text" placeholder="email")
   %input(type="date")
+  %input(type="datetime-local")
   %textarea(placeholder="write a note")
   %input(type="password" placeholder="password")
   %input(required="true" type="file")
