--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -21,6 +21,7 @@
 %p= link_to "Financial Accounts", crud_financial_accounts_path
 %p= link_to "Gift Ideas", crud_gift_ideas_path
 %p= link_to "Post Bin", crud_post_bin_requests_path
+%p= link_to "Projects", crud_projects_path
 
 %h2 Api Routes
 %p= link_to "Ping", api_v1_ping_path
