--- a/app/views/crud/csv_uploads/index.html.haml
+++ b/app/views/crud/csv_uploads/index.html.haml
@@ -17,6 +17,6 @@
         %td= link_to csv_upload.id, crud_csv_upload_path(csv_upload.id)
         %td= csv_upload.parser_class_name
         %td= csv_upload.original_filename
-        %td.text-right= csv_upload.created_at.to_formatted_s(:long)
+        %td.text-right= csv_upload.created_at.to_fs
 
 = paginate csv_uploads
