Add CRUD pages for warm fuzzies

--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -22,6 +22,7 @@
 %p= link_to "Gift Ideas", crud_gift_ideas_path
 %p= link_to "Post Bin", crud_post_bin_requests_path
 %p= link_to "Projects", crud_projects_path
+%p= link_to "Warm Fuzzies", crud_warm_fuzzies_path
 
 %h2 Api Routes
 %p= link_to "Ping", api_v1_ping_path
