--- a/app/views/crud/warm_fuzzies/_form.html.haml
+++ b/app/views/crud/warm_fuzzies/_form.html.haml
@@ -2,5 +2,6 @@
   = form.text_field :title, placeholder: "title"
   = form.text_field :author, placeholder: "author"
   = form.text_area :body, placeholder: "body"
+  = form.file_field :screenshot, placeholder: "screenshot"
   = form.datetime_local_field :received_at, placeholder: "received at"
   = form.button button_label
