--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -3,6 +3,7 @@
 %h2 Public Pages
 %p= link_to "Artsy Viewer", artsy_viewer_path
 %p= link_to "Fairing Direball", faring_direball_path
+%p= link_to "Fuzzies", fuzzies_path
 %p= link_to "Reading List", reading_list_path(year: Time.now.year)
 %p= link_to "Root", root_path
 %p= link_to "Style Pages", article_styles_path
