Admin creates financial statement

--- a/app/views/crud/financial_statements/index.html.haml
+++ b/app/views/crud/financial_statements/index.html.haml
@@ -2,6 +2,8 @@
 
 %p= link_to "Financial Account", crud_financial_account_path(financial_account)
 
+%p= link_to "New Financial Statement", new_crud_financial_account_financial_statement_path(financial_account)
+
 %p= link_to "Random Financial Statement", crud_financial_account_financial_statement_path(financial_account, "random")
 
 %table
