--- a/app/views/crud/financial_statements/show.html.haml
+++ b/app/views/crud/financial_statements/show.html.haml
@@ -2,4 +2,6 @@
 
 %p= link_to "Financial Statement List", crud_financial_account_financial_statements_path(financial_account)
 
+%p= link_to "Edit Financial Statement", edit_crud_financial_account_financial_statement_path(financial_account, financial_statement)
+
 = render partial: "attrs_table", locals: { attrs: financial_statement.table_attrs }
