--- a/app/views/financial_reports/show.html.haml
+++ b/app/views/financial_reports/show.html.haml
@@ -4,69 +4,39 @@
     %h1.m-0= financial_report.year
     %p.m-0= link_to "next", financial_report_path(financial_report.next_year)
 
-- checking_data = financial_report.checking_data
-- savings_data = financial_report.savings_data
+- financial_report.category_data.each do |(category_name, account_data)|
+  %h2= category_name.to_s.titleize
 
-%h2 Checking
-
-%table.text-sm.table-fixed
-  %thead
-    %tr
-      %th.text-left(class="w-[70px]") Month
-      %th.text-right(class="w-[120px]") Jan
-      %th.text-right(class="w-[120px]") Feb
-      %th.text-right(class="w-[120px]") Mar
-      %th.text-right(class="w-[120px]") Apr
-      %th.text-right(class="w-[120px]") May
-      %th.text-right(class="w-[120px]") Jun
-      %th.text-right(class="w-[120px]") Jul
-      %th.text-right(class="w-[120px]") Aug
-      %th.text-right(class="w-[120px]") Sep
-      %th.text-right(class="w-[120px]") Oct
-      %th.text-right(class="w-[120px]") Nov
-      %th.text-right(class="w-[120px]") Dec
-  %tbody
-    %tr
-      %td.text-left Starting
-      = render partial: "amount_cents", collection: checking_data.starting_amounts
-    %tr
-      %td.text-left Income
-      = render partial: "amount_cents", collection: checking_data.income_amounts
-    %tr
-      %td.text-left Expenses
-      = render partial: "amount_cents", collection: checking_data.expenses_amounts
-    %tr
-      %td.text-left Ending
-      = render partial: "amount_cents", collection: checking_data.ending_amounts
-    %tr
-      %td.text-left Net
-      = render partial: "amount_cents", collection: checking_data.net_amounts
-
-%h2 Savings
-
-%table.text-sm.table-fixed
-  %thead
-    %tr
-      %th.text-left(class="w-[70px]") Month
-      %th.text-right(class="w-[120px]") Jan
-      %th.text-right(class="w-[120px]") Feb
-      %th.text-right(class="w-[120px]") Mar
-      %th.text-right(class="w-[120px]") Apr
-      %th.text-right(class="w-[120px]") May
-      %th.text-right(class="w-[120px]") Jun
-      %th.text-right(class="w-[120px]") Jul
-      %th.text-right(class="w-[120px]") Aug
-      %th.text-right(class="w-[120px]") Sep
-      %th.text-right(class="w-[120px]") Oct
-      %th.text-right(class="w-[120px]") Nov
-      %th.text-right(class="w-[120px]") Dec
-  %tbody
-    %tr
-      %td.text-left Starting
-      = render partial: "amount_cents", collection: savings_data.starting_amounts
-    %tr
-      %td.text-left Ending
-      = render partial: "amount_cents", collection: savings_data.ending_amounts
-    %tr
-      %td.text-left Net
-      = render partial: "amount_cents", collection: savings_data.net_amounts
+  %table.text-sm.table-fixed
+    %thead
+      %tr
+        %th.text-left(class="w-[70px]") Month
+        %th.text-right(class="w-[120px]") Jan
+        %th.text-right(class="w-[120px]") Feb
+        %th.text-right(class="w-[120px]") Mar
+        %th.text-right(class="w-[120px]") Apr
+        %th.text-right(class="w-[120px]") May
+        %th.text-right(class="w-[120px]") Jun
+        %th.text-right(class="w-[120px]") Jul
+        %th.text-right(class="w-[120px]") Aug
+        %th.text-right(class="w-[120px]") Sep
+        %th.text-right(class="w-[120px]") Oct
+        %th.text-right(class="w-[120px]") Nov
+        %th.text-right(class="w-[120px]") Dec
+    %tbody
+      %tr
+        %td.text-left Starting
+        = render partial: "amount_cents", collection: account_data.starting_amounts
+      - if category_name == :checking
+        %tr
+          %td.text-left Income
+          = render partial: "amount_cents", collection: account_data.income_amounts
+        %tr
+          %td.text-left Expenses
+          = render partial: "amount_cents", collection: account_data.expenses_amounts
+      %tr
+        %td.text-left Ending
+        = render partial: "amount_cents", collection: account_data.ending_amounts
+      %tr
+        %td.text-left Net
+        = render partial: "amount_cents", collection: account_data.net_amounts
