Admin manages sneaker data

--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -23,6 +23,7 @@
 %p= link_to "Gift Ideas", crud_gift_ideas_path
 %p= link_to "Post Bin", crud_post_bin_requests_path
 %p= link_to "Projects", crud_projects_path
+%p= link_to "Sneakers", crud_sneakers_path
 %p= link_to "Warm Fuzzies", crud_warm_fuzzies_path
 
 %h2 Api Routes
