Visitor views sneakers page

--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -6,6 +6,7 @@
 %p= link_to "Fuzzies", fuzzies_path
 %p= link_to "Reading List", reading_list_path(year: Time.now.year)
 %p= link_to "Root", root_path
+%p= link_to "Sneakers Page", sneakers_path
 %p= link_to "Style Pages", article_styles_path
 %p= link_to "Wishlist", wishlist_path
 
