Add crud pages for webhook senders

--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -26,6 +26,7 @@
 %p= link_to "Projects", crud_projects_path
 %p= link_to "Sneakers", crud_sneakers_path
 %p= link_to "Warm Fuzzies", crud_warm_fuzzies_path
+%p= link_to "Webhook Senders", crud_webhook_senders_path
 
 %h2 Api Routes
 %p= link_to "Ping", api_v1_ping_path
