--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -1,6 +1,7 @@
 %h1 Dashboard
 
 %h2 Public Pages
+
 %p= link_to "Artsy Viewer", artsy_viewer_path
 %p= link_to "Fairing Direball", faring_direball_path
 %p= link_to "Reading List", reading_list_path(year: Time.now.year)
@@ -10,6 +11,7 @@
 %p= link_to "Wishlist", wishlist_path
 
 %h2 Private Pages
+
 %p= link_to "Cybertail", cybertail_path
 %p= link_to "Financial Report", financial_report_path(year: Time.now.year)
 %p= link_to "Fuzzies", fuzzies_path
@@ -18,16 +20,19 @@
 %p= link_to "Today", today_path
 
 %h2 CRUD Pages
+
 %p= link_to "Books", crud_books_path
 %p= link_to "CSV Uploads", crud_csv_uploads_path
 %p= link_to "Financial Accounts", crud_financial_accounts_path
 %p= link_to "Gift Ideas", crud_gift_ideas_path
 %p= link_to "Post Bin", crud_post_bin_requests_path
 %p= link_to "Projects", crud_projects_path
+%p= link_to "Raw Hooks", crud_raw_hooks_path
 %p= link_to "Sneakers", crud_sneakers_path
 %p= link_to "Warm Fuzzies", crud_warm_fuzzies_path
 %p= link_to "Webhook Senders", crud_webhook_senders_path
 
 %h2 Api Routes
+
 %p= link_to "Ping", api_v1_ping_path
 %p= link_to "Word Rot Killswitch", api_v1_word_rot_killswitch_path
