--- a/app/views/cybertail/index.html.haml
+++ b/app/views/cybertail/index.html.haml
@@ -1,7 +1,3 @@
 %h1 Cybertail!
 = turbo_stream_from "hooks"
-%ul#hooks.bg-off-white.m-0.p-2
-  - hooks.each do |hook|
-    %li.flex.m-0.p-0.mb-4
-      = image_tag(hook.webhook_sender.logo_name, class: "w-8 m-0 h-8 mr-2")
-      %span.line-clamp-1= link_to hook.message, crud_raw_hook_path(hook.raw_hook)
+%ul#hooks.bg-off-white.m-0.p-2= render partial: "hook", collection: hooks
