--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -15,6 +15,7 @@
 %p= link_to "Cybertail", cybertail_path
 %p= link_to "Financial Report", financial_report_path(year: Time.now.year)
 %p= link_to "Fuzzies", fuzzies_path
+%p= link_to "Live Post Bin", post_bin_path
 %p= link_to "Model Counts", model_counts_path
 %p= link_to "Project List", project_list_path
 %p= link_to "Today", today_path
@@ -25,7 +26,6 @@
 %p= link_to "CSV Uploads", crud_csv_uploads_path
 %p= link_to "Financial Accounts", crud_financial_accounts_path
 %p= link_to "Gift Ideas", crud_gift_ideas_path
-%p= link_to "Post Bin", crud_post_bin_requests_path
 %p= link_to "Projects", crud_projects_path
 %p= link_to "Raw Hooks", crud_raw_hooks_path
 %p= link_to "Sneakers", crud_sneakers_path
