--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -26,6 +26,7 @@
 %p= link_to "CSV Uploads", crud_csv_uploads_path
 %p= link_to "Financial Accounts", crud_financial_accounts_path
 %p= link_to "Gift Ideas", crud_gift_ideas_path
+%p= link_to "Post Bin Requests", crud_post_bin_requests_path
 %p= link_to "Projects", crud_projects_path
 %p= link_to "Raw Hooks", crud_raw_hooks_path
 %p= link_to "Sneakers", crud_sneakers_path
