Improve live post bin links

--- a/app/views/post_bin/_post_bin_request.html.haml
+++ b/app/views/post_bin/_post_bin_request.html.haml
@@ -1,1 +1,2 @@
-%li.m-0.my-4.p-0.line-clamp-1 #{post_bin_request.id} #{link_to post_bin_request.body, crud_post_bin_request_path(post_bin_request)}
+%li.m-0.my-4.p-0.line-clamp-1
+  = link_to "#{[post_bin_request.id, post_bin_request.body].join(" ")}", crud_post_bin_request_path(post_bin_request)
