--- a/app/views/crud/books/new.html.haml
+++ b/app/views/crud/books/new.html.haml
@@ -4,5 +4,6 @@
 
 = form_with model: [:crud, book] do |form|
   = form.text_field :isbn, placeholder: "isbn"
+  = form.select :format, book_format_options, selected: book.format
   = form.date_field :finished_on, placeholder: "finished on"
   = form.button "create"
