--- a/app/views/post_bin/index.html.haml
+++ b/app/views/post_bin/index.html.haml
@@ -1,5 +1,5 @@
 %h1 Live Post Bin
-%p To see somethign show up here make a request like so:
+%p To see something show up here make a request like so:
 %pre.text-off-black
   %code
     $ MLI_CLIENT_TOKEN=$(bundle exec rails runner "print Monolithium.config.client_token")
