--- a/app/views/cybertail/index.html.haml
+++ b/app/views/cybertail/index.html.haml
@@ -1,3 +1,3 @@
 %h1 Cybertail!
-= turbo_stream_from "hooks"
+= turbo_stream_from Hook::CHANNEL_NAME
 %ul#hooks.bg-off-white.m-0.p-2= render partial: "hook", collection: hooks
