Rearrange Artsy Viewer elements a little

--- a/app/views/layouts/artsy_viewer.html.haml
+++ b/app/views/layouts/artsy_viewer.html.haml
@@ -6,5 +6,4 @@
     %title Artsy Viewer
     %meta(name='viewport' content='')
     = render partial: "layouts/shared_head"
-  %body
-    %main(data-controller="artsy-viewer")=yield
+  %body=yield
