Admin views browsers summary report

--- a/app/views/analytics_reports/show.html.haml
+++ b/app/views/analytics_reports/show.html.haml
@@ -9,7 +9,7 @@
 %table
   %thead
     %tr
-      %th Page
+      %th= analytics_report.metric_name.capitalize
       %th.text-right Count
 
   %tbody
