--- a/spec/fixtures/generators/crud_pages/app/views/dashboard/show.html.haml
+++ b/spec/fixtures/generators/crud_pages/app/views/dashboard/show.html.haml
@@ -26,6 +26,7 @@
 %h2 CRUD Pages
 
 %p= link_to "Things", crud_things_path
+%p= link_to "Apache Log Items", crud_apache_log_items_path
 %p= link_to "Apache Log Files", crud_apache_log_files_path
 %p= link_to "Books", crud_books_path
 %p= link_to "CSV Uploads", crud_csv_uploads_path
