Link to CRUD show page from detail reports

--- a/app/views/analytics_reports/_detail.html.haml
+++ b/app/views/analytics_reports/_detail.html.haml
@@ -10,6 +10,6 @@
     - analytics_report.rows.each do |row|
       %tr
         %td= row.requested_at.to_fs
-        %td= row.label
+        %td= link_to row.label, crud_apache_log_item_path(row.id)
 
 = paginate analytics_report.paginated_items
