Lock date column width on detail reports

--- a/app/views/analytics_reports/_detail.html.haml
+++ b/app/views/analytics_reports/_detail.html.haml
@@ -3,7 +3,7 @@
 %table
   %thead
     %tr
-      %th Requested At
+      %th(class="w-[150px]") Requested At
       %th= analytics_report.metric_name.capitalize
 
   %tbody
